--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         </li>
                     </ul>
                     <div class="mt-12 lg:mt-8">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2891.0444356084754!2d1.4716213163160432!3d43.56395717912458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebc30ed0591cf%3A0xb449d735dc91049b!2s15%20Av.%20du%20Colonel%20Roche%2C%2031400%20Toulouse!5e0!3m2!1sfr!2sfr!4v1638271882423!5m2!1sfr!2sfr"
-                                width="100%" height="300" style="border:0;" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2891.1403471560443!2d1.467751216316061!3d43.56195857912462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebc3b219e54c9%3A0xbfa01c91f63e6468!2sUniversit%C3%A9%20Toulouse%20III%20-%20Paul%20Sabatier!5e0!3m2!1sfr!2sfr!4v1638299827718!5m2!1sfr!2sfr"
+                                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
                 <div id="contact-form" class="lg:w-3/5 ombre px-6 py-6 lg:py-12" data-sal="zoom-out"
@@ -276,7 +276,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" @click="idSection = 4">
+                <a href="#contact" @click="idSection = 4">
                     <i class="far fa-envelope text-lg" :class="{'text-bleu-clair': idSection === 4}"></i>
                     <span class="ml-3" :class="{'text-white': idSection === 4}">Contact</span>
                 </a>
