Add manifest to Tic tac toe

--- a/30-jours-code/22-tic-tac-toe/index.html
+++ b/30-jours-code/22-tic-tac-toe/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="manifest" href="./manifest.json">
     <title>Tic Tac Toe</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@900&display=swap');
