--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
             </li>
             <li>
                 <a href="#" @click="idSection = 2">
-                    <i class="far fa-file text-lg" :class="{'text-bleu-clair': idSection === 2}"></i>
-                    <span class="ml-3" :class="{'text-white': idSection === 2}">Resumé</span>
+                    <i class="fas fa-laptop-code text-lg" :class="{'text-bleu-clair': idSection === 2}"></i>
+                    <span class="ml-3" :class="{'text-white': idSection === 2}">Compétences</span>
                 </a>
             </li>
             <li>
