Add PWA Acceuil

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./sal/sal.css">
+    <link rel="manifest" href="./manifest.json">
     <title>Billy Ronico</title>
 </head>
 <body>
