Add PWA Acceuil

--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
 <script src="https://unpkg.com/vue@next"></script>
 <script src="./sal/sal.js"></script>
 <script src="./main.js"></script>
+<script>console.log("PWA here")</script>
 
 </body>
 </html>
